增加依存分析

--- a/P1_trial.ipynb
+++ b/P1_trial.ipynb
@@ -250,11 +250,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-09T18:07:03.836703Z",
-     "start_time": "2019-09-09T18:06:57.589403Z"
+     "end_time": "2019-09-11T03:08:45.471839Z",
+     "start_time": "2019-09-11T03:08:35.226636Z"
     }
    },
    "outputs": [
@@ -262,9 +262,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "E:\\Soft\\Anaconda3\\envs\\py36\\lib\\site-packages\\gensim\\utils.py:1197: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "E:\\Anaconda3\\envs\\py36\\lib\\site-packages\\gensim\\utils.py:1197: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
       "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n",
-      "E:\\Soft\\Anaconda3\\envs\\py36\\lib\\site-packages\\smart_open\\smart_open_lib.py:398: UserWarning: This function is deprecated, use smart_open.open instead. See the migration notes for details: https://github.com/RaRe-Technologies/smart_open/blob/master/README.rst#migrating-to-the-new-open-function\n",
+      "E:\\Anaconda3\\envs\\py36\\lib\\site-packages\\smart_open\\smart_open_lib.py:398: UserWarning: This function is deprecated, use smart_open.open instead. See the migration notes for details: https://github.com/RaRe-Technologies/smart_open/blob/master/README.rst#migrating-to-the-new-open-function\n",
       "  'See the migration notes for details: %s' % _MIGRATION_NOTES_URL\n"
      ]
     }
@@ -401,11 +401,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-09T18:08:00.394110Z",
-     "start_time": "2019-09-09T18:08:00.388083Z"
+     "end_time": "2019-09-11T03:09:22.115307Z",
+     "start_time": "2019-09-11T03:09:22.111309Z"
     }
    },
    "outputs": [],
@@ -428,11 +428,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-09T18:09:59.489220Z",
-     "start_time": "2019-09-09T18:08:01.548822Z"
+     "end_time": "2019-09-11T03:11:58.811192Z",
+     "start_time": "2019-09-11T03:09:31.446014Z"
     }
    },
    "outputs": [
@@ -441,8 +441,8 @@
      "output_type": "stream",
      "text": [
       "Building prefix dict from the default dictionary ...\n",
-      "Dumping model to file cache C:\\Users\\Vick\\AppData\\Local\\Temp\\jieba.cache\n",
-      "Loading model cost 0.756 seconds.\n",
+      "Dumping model to file cache C:\\Users\\vick_\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 0.977 seconds.\n",
       "Prefix dict has been built succesfully.\n"
      ]
     }
@@ -483,11 +483,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-09T18:12:49.614969Z",
-     "start_time": "2019-09-09T18:12:49.452969Z"
+     "end_time": "2019-09-11T03:19:12.598287Z",
+     "start_time": "2019-09-11T03:19:11.717303Z"
     }
    },
    "outputs": [
@@ -495,7 +495,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "E:\\Soft\\Anaconda3\\envs\\py36\\lib\\site-packages\\ipykernel_launcher.py:9: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
+      "E:\\Anaconda3\\envs\\py36\\lib\\site-packages\\ipykernel_launcher.py:9: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
       "  if __name__ == '__main__':\n"
      ]
     },
@@ -507,24 +507,24 @@
        " '告诉',\n",
        " '指出',\n",
        " '认为',\n",
-       " '介绍',\n",
        " '说道',\n",
-       " '看来',\n",
-       " '写道',\n",
-       " '话',\n",
-       " '强调',\n",
        " '坦言',\n",
-       " '提到',\n",
-       " '称',\n",
+       " '介绍',\n",
+       " '看来',\n",
        " '透露',\n",
+       " '写道',\n",
        " '举例',\n",
-       " '形容',\n",
-       " '证实',\n",
-       " '得知',\n",
-       " '说法']"
+       " '强调',\n",
+       " '深有感触',\n",
+       " '称',\n",
+       " '话',\n",
+       " '直言',\n",
+       " '说法',\n",
+       " '提到',\n",
+       " '笑言']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,49 +542,119 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3.1 词性标注"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-09T18:54:36.383711Z",
-     "start_time": "2019-09-09T18:54:35.891714Z"
+     "end_time": "2019-09-11T08:36:01.148092Z",
+     "start_time": "2019-09-11T08:35:59.864821Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['新华社', '德国', '杜塞尔多夫', '６月', '６日', '电', '题', '：', '乒乓', '女', '球迷\\n']\n",
-      "ni\tns\tns\tnt\tnt\tn\tn\twp\tj\tb\tn\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# -*- coding: utf-8 -*-\n",
     "import os\n",
     "LTP_DATA_DIR = '.\\\\ltp_data_v3.4.0\\\\'  # ltp模型目录的路径\n",
     "pos_model_path = os.path.join(LTP_DATA_DIR, 'pos.model')  # 词性标注模型路径，模型名称为`pos.model`\n",
+    "ner_model_path = os.path.join(LTP_DATA_DIR, 'ner.model')  # 命名实体识别模型路径，模型名称为`pos.model`\n",
+    "par_model_path = os.path.join(LTP_DATA_DIR, 'parser.model')  # 依存句法分析模型路径，模型名称为`parser.model`\n",
+    "srl_model_path = os.path.join(LTP_DATA_DIR, 'pisrl_win.model')  # 语义角色标注模型目录路径，模型目录为`srl`。注意该模型路径是一个目录，而不是一个文件。\n",
     "\n",
     "from pyltp import Postagger\n",
     "postagger = Postagger() # 初始化实例\n",
     "postagger.load(pos_model_path)  # 加载模型\n",
     "\n",
-    "with open('corpus.txt', 'r', encoding='utf-8') as f:\n",
-    "    line = f.readline()\n",
-    "    words = line.split(' ')\n",
-    "print(words)\n",
-    "postags = postagger.postag(words)  # 词性标注\n",
+    "from pyltp import NamedEntityRecognizer\n",
+    "recognizer = NamedEntityRecognizer() # 初始化实例\n",
+    "recognizer.load(ner_model_path)  # 加载模型\n",
     "\n",
-    "print('\\t'.join(postags))\n",
-    "postagger.release()  # 释放模型"
+    "from pyltp import Parser\n",
+    "parser = Parser() # 初始化实例\n",
+    "parser.load(par_model_path)  # 加载模型\n",
+    "\n",
+    "from pyltp import SementicRoleLabeller\n",
+    "labeller = SementicRoleLabeller() # 初始化实例\n",
+    "labeller.load(srl_model_path)  # 加载模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-09-11T09:53:37.593Z"
+    },
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "maxsize = 30\n",
+    "count = 0\n",
+    "\n",
+    "with open('corpus.txt', 'r', encoding='utf-8') as f:\n",
+    "    for line in f.readlines():\n",
+    "        words = line.split(' ')\n",
+    "        keyword = contain_keywords(similar_words, words) # 句子是否包含“说”的同义词\n",
+    "        if keyword == '':\n",
+    "            continue\n",
+    "        print('%d:%s' % (words.index(keyword), keyword))\n",
+    "        postags = postagger.postag(words)  # 词性标注\n",
+    "        netags = recognizer.recognize(words, postags)  # 命名实体识别\n",
+    "        arcs = parser.parse(words, postags)  # 句法分析\n",
+    "        \n",
+    "        # 打印词性标注，命名实体识别，句法分析结果(可注释)\n",
+    "        print('序号' + '\\t' + '词' + '\\t' + '词性' + '\\t' + '命名实体' + '\\t' + '依存句法')\n",
+    "        print('--------------------------------------------')\n",
+    "        word_index = 0\n",
+    "        for w,p,n,a in zip(words, postags, netags, (\"%d:%s\" % (arc.head, arc.relation) for arc in arcs)):\n",
+    "            print(str(word_index) + '\\t' + w + '\\t' + p + '\\t' + n + '\\t' + a)\n",
+    "            word_index += 1\n",
+    "        \n",
+    "        # arcs 使用依存句法分析的结果\n",
+    "        roles = labeller.label(words, postags, arcs)  # 语义角色标注\n",
+    "        \n",
+    "        # 打印依存句法分析结果(可注释)\n",
+    "        for role in roles:\n",
+    "            print(role.index, \"\".join(\n",
+    "                [\"%s:(%d,%d)\" % (arg.name, arg.range.start, arg.range.end) for arg in role.arguments]))\n",
+    "        \n",
+    "        for role in roles:\n",
+    "            if words.index(keyword) == role.index:\n",
+    "                for arg in role.arguments:\n",
+    "                    if arg.name == 'A0':\n",
+    "                        sub = ''.join(words[arg.range.start:arg.range.end])\n",
+    "                        print(\"观点主体\" + sub)\n",
+    "        \n",
+    "        print('\\n======================================================================\\n')\n",
+    "        count += 1\n",
+    "        if count == maxsize:\n",
+    "            break\n",
+    "\n",
+    "postagger.release()  # 释放模型\n",
+    "recognizer.release()  # 释放模型\n",
+    "parser.release()  # 释放模型\n",
+    "labeller.release()  # 释放模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-11T03:30:01.286025Z",
+     "start_time": "2019-09-11T03:30:01.282040Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def contain_keywords(keywords, words):\n",
+    "    '''\n",
+    "    return key word in words, return empty if not match\n",
+    "    '''\n",
+    "    for keyword in keywords:\n",
+    "        if keyword in words:\n",
+    "            return keyword\n",
+    "    return ''"
    ]
   },
   {
@@ -596,11 +666,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-09T18:56:32.223806Z",
-     "start_time": "2019-09-09T18:56:31.523153Z"
+     "end_time": "2019-09-11T03:06:02.505982Z",
+     "start_time": "2019-09-11T03:06:02.156373Z"
     }
    },
    "outputs": [
