准备后续工作

--- a/P1_trial.ipynb
+++ b/P1_trial.ipynb
@@ -542,6 +542,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 使⽤ NER，Dependency Parsing 等⽅式，获得是谁说了话，说了什么话。\n",
+    "- Stanford CoreNLP:https://stanfordnlp.github.io/CoreNLP/\n",
+    "- 哈⼯⼤ LTP: https://github.com/HIT-SCIR/pyltp"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -708,7 +717,7 @@
      "end_time": "2019-09-11T10:28:48.248082Z",
      "start_time": "2019-09-11T10:28:48.240087Z"
     },
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -900,6 +909,62 @@
     "for s, v, p in zip(subs, says, points): \n",
     "    print(s + '\\t' + v + '\\t' + p)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. 确定⾔言论的结束"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在确定了谁说的，说了什么之后，我们要做的就是确定这个话语的结束。要确定这个话语如何结束，最简单的⽅式是碰见句号的时候就停止，但是有的话可能跨了多个句号。那么这个如何确定多个呢? 这个时候就比较 tricky 了。在有的时候，我们可以使用 tfidf 等关键字，或者使用 tfidf 关键首先字获得句子的向量然后使用向量进行行对比的。获得句子向量之后，那么我们就可以把判断两句话是不是类似的、说得同一个主题这个问题变成这两个句子的距离是不是小于某个阈值。 Tfidf 的句句⼦子向量量化是一种比较基础的向量化⽅方式，长久以来也是大家用的最多的。但是 tfidf 不能变成不相同的单词的语义相似性，在词向量提出来之后，有一个比较好的方式解释基于词向量量进行行句子的向量化。 基于词向量获得句子的向量化也是现在的一个研究课题，这里给大家推荐一个简单性和高效性两者比较平衡的方法，其原理就是使用单词的词向量加权 + PCA 降维 这个方法是 普林林斯顿大学2017年提出来的一个⽅方法，很简单，但是效果也不错。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. 展示"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
