new project structure

--- a/P1_trial.ipynb
+++ b/P1_trial.ipynb
@@ -552,11 +552,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T10:27:36.584986Z",
-     "start_time": "2019-09-11T10:27:36.580987Z"
+     "end_time": "2019-09-11T14:22:11.370790Z",
+     "start_time": "2019-09-11T14:22:11.367791Z"
     }
    },
    "outputs": [],
@@ -585,11 +585,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T10:27:38.927594Z",
-     "start_time": "2019-09-11T10:27:37.599359Z"
+     "end_time": "2019-09-11T14:22:14.669998Z",
+     "start_time": "2019-09-11T14:22:12.262893Z"
     }
    },
    "outputs": [],
@@ -621,11 +621,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T10:27:46.272088Z",
-     "start_time": "2019-09-11T10:27:46.269075Z"
+     "end_time": "2019-09-11T14:22:14.694893Z",
+     "start_time": "2019-09-11T14:22:14.690895Z"
     }
    },
    "outputs": [],
@@ -642,11 +642,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T10:28:33.764645Z",
-     "start_time": "2019-09-11T10:27:50.181802Z"
+     "end_time": "2019-09-11T14:22:52.958212Z",
+     "start_time": "2019-09-11T14:22:15.158188Z"
     },
     "scrolled": true
    },
@@ -694,6 +694,7 @@
     "                        point = ''.join(words[role.index+1:])\n",
     "#                         print(\"观点主体: \" + sub)\n",
     "#                         print(\"观点内容: \" + point)\n",
+    "                        if point == '。\\n': continue\n",
     "                        subs.append(sub)\n",
     "                        says.append(keyword)\n",
     "                        points.append(point)\n",
@@ -711,11 +712,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T10:28:48.248082Z",
-     "start_time": "2019-09-11T10:28:48.240087Z"
+     "end_time": "2019-09-11T14:22:55.214253Z",
+     "start_time": "2019-09-11T14:22:55.205253Z"
     },
     "scrolled": true
    },
@@ -724,19 +725,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "来自广州的茶茶\t说\t。\n",
-      "\n",
       "她\t告诉\t父母这次出来是到德国看朋友，住宿和球票的花费都是平时做家教挣的，父母支援了机票钱，从香港到杜塞尔多夫往返只有三千多元人民币，让其他内地球迷非常羡慕。\n",
       "\n",
       "熊老师\t说\t，这次有了德国的签证，以后去日本看比赛签证就容易多了。\n",
-      "\n",
-      "井井\t说\t。\n",
-      "\n",
-      "井井\t说\t。\n",
-      "\n",
-      "茶茶\t说\t。\n",
-      "\n",
-      "她\t写道\t。\n",
       "\n",
       "哈佛大学招生部门\t表示\t要审核他们的入学情况。\n",
       "\n",
@@ -768,8 +759,6 @@
       "\n",
       "王晓康\t说\t，苗圃种植园经过整合会成为休闲农庄，不仅可以通过优质别样的苗木促进农业增收，也有利于农村生态，通过生态旅游创收。\n",
       "\n",
-      "王文一\t说\t。\n",
-      "\n",
       "周口市农业局科教科科长刘民乾\t说\t：“能够吸引众多大学生回归田野进行创业，是因为土地效益的巨大吸引力，而土地效益源于他们对市场的敏锐、对技术的把握以及科学的经营管理，如此，才能使平凡的土地生产出‘高大上’的农产品。”\n",
       "\n",
       "河南省社会科学院长期关注农业问题的专家刘刚\t表示\t，“大学生创业潮”有利于促进农民增收，同时激活农业创新和农村发展潜力。\n",
@@ -796,8 +785,6 @@
       "\n",
       "北京市政协委员\t认为\t，家政服务的重要性不言而喻，尤其是进入老龄化社会和“二胎时代”，家政服务不仅需求大，而且人们对服务质量有新的要求。\n",
       "\n",
-      "于雪鹰\t说\t。\n",
-      "\n",
       "樊澄\t介绍\t，在北京4000余家家政服务企业中，注册资金在10万元以上的仅800家左右。\n",
       "\n",
       "专家\t指出\t，北京应加大家政服务龙头型示范企业培育，支持和鼓励示范企业通过资源整合或加盟连锁等方式，增加服务网点、完善服务网络，实现规模化、连锁化、品牌化经营；\n",
@@ -807,8 +794,6 @@
       "陈峰\t认为\t，一方面，当今世界正面临经济低位徘徊、逆全球化暗流涌动、传统欧美模式受到前所未有的冲击等诸多挑战；\n",
       "\n",
       "陈峰\t表示\t，海航集团有三大目标：一是打造一个品牌和发展模式在业界都堪称经典的案例；\n",
-      "\n",
-      "陈峰\t说\t。\n",
       "\n",
       "陈峰\t说\t：“我觉得海航继承了中国的文化自信，用文化来凝聚全球人才，而且实践证明，这是完全可以做到的。”\n",
       "\n",
@@ -838,17 +823,11 @@
       "\n",
       "徐匡迪\t指出\t，目前新区规划还在深入研究，正在探讨几个重大问题：一是如何做到理水营城，真正形成水城融、蓝绿汇、天人合；\n",
       "\n",
-      "晋江市公安局经侦大队三中队副中队长陈晓山\t说\t。\n",
-      "\n",
       "福建泉州南安市的紫菜养殖户李强荣\t表示\t，近１０年来紫菜价格波动不大，基本上在１万元／吨左右，很少有滞销，但“塑料紫菜”谣言出来后，原料收购价格从８万元／吨降到不足５万元／吨。\n",
-      "\n",
-      "李强荣\t说\t。\n",
       "\n",
       "王某祥\t认为\t自己吃到了“塑料做的假紫菜”，便联系生产企业进行维权。\n",
       "\n",
       "王某祥\t说\t，为了能要上高价，他指挥自己的员工拍摄“塑料紫菜”视频并上传到网络，同时威胁生产企业，要是不给钱解决，他将继续在网上大量转发。\n",
-      "\n",
-      "福建省水产研究所原副所长吴成业\t说\t。\n",
       "\n",
       "公安部网络安全保卫局副局长张宏业\t介绍\t，目前在网上传播食品安全谣言的人一部分是为博取眼球、赚取热度，置科学常识和实际情况于不顾，偷换概念、歪曲事实，也有极个别人是为谋取不法利益等目的对食品生产销售企业、在售食品编造谣言，有意抹黑。\n",
       "\n",
@@ -877,8 +856,6 @@
       "康富达仿真花卉公司负责人赖垂龙\t说\t：“像我们这种加工型企业需要大量劳动力，自从把车间建到村里之后，招工不再那么困难，生产成本也下降了。”\n",
       "\n",
       "赣州市扶贫办副主任钟小春\t认为\t，扶贫车间能够提高贫困群众的组织化程度，通过持续稳定的就业，还可以提升他们的综合素质。\n",
-      "\n",
-      "徐志坚\t说\t。\n",
       "\n",
       "赛事主办方香港业余田径总会主席关祺\t表示\t，香港马拉松以服务好本地民众为第一要旨，赛事完全是市场运作，加上特区政府的鼎力支持，才得以吸引越来越多香港市民参与。\n",
       "\n",
@@ -921,7 +898,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "在确定了谁说的，说了什么之后，我们要做的就是确定这个话语的结束。要确定这个话语如何结束，最简单的⽅式是碰见句号的时候就停止，但是有的话可能跨了多个句号。那么这个如何确定多个呢? 这个时候就比较 tricky 了。在有的时候，我们可以使用 tfidf 等关键字，或者使用 tfidf 关键首先字获得句子的向量然后使用向量进行行对比的。获得句子向量之后，那么我们就可以把判断两句话是不是类似的、说得同一个主题这个问题变成这两个句子的距离是不是小于某个阈值。 Tfidf 的句句⼦子向量量化是一种比较基础的向量化⽅方式，长久以来也是大家用的最多的。但是 tfidf 不能变成不相同的单词的语义相似性，在词向量提出来之后，有一个比较好的方式解释基于词向量量进行行句子的向量化。 基于词向量获得句子的向量化也是现在的一个研究课题，这里给大家推荐一个简单性和高效性两者比较平衡的方法，其原理就是使用单词的词向量加权 + PCA 降维 这个方法是 普林林斯顿大学2017年提出来的一个⽅方法，很简单，但是效果也不错。"
+    "在确定了谁说的，说了什么之后，我们要做的就是确定这个话语的结束。要确定这个话语如何结束，最简单的⽅式是碰见句号的时候就停止，但是有的话可能跨了多个句号。那么这个如何确定多个呢? 这个时候就比较 tricky 了。在有的时候，我们可以使用 tfidf 等关键字，或者使用 tfidf 关键首先字获得句子的向量然后使用向量进行行对比的。获得句子向量之后，那么我们就可以把判断两句话是不是类似的、说得同一个主题这个问题变成这两个句子的距离是不是小于某个阈值。 Tfidf 的句句⼦子向量量化是一种比较基础的向量化⽅方式，长久以来也是大家用的最多的。但是 tfidf 不能变成不相同的单词的语义相似性，在词向量提出来之后，有一个比较好的方式解释基于词向量量进行行句子的向量化。 基于词向量获得句子的向量化也是现在的一个研究课题，这里给大家推荐一个简单性和高效性两者比较平衡的方法，其原理就是使用单词的词向量加权 + PCA 降维 这个方法是 普林林斯顿大学2017年提出来的一个⽅方法，很简单，但是效果也不错。\n",
+    "\n",
+    "- 普林斯顿句子向量原始论⽂ Paper: https://openreview.net/pdf?id=SyK00v5xx\n",
+    "- Scikit-learning TFIDF句子向量化: https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html"
    ]
   },
   {
